Reformatted hyperlinks so that they are always bright blue, all over the over the site. Should address visibility. I realize this was part of the larger style que style question, but wanted to do it before presenting tomorrow. So I reopened issue 37 anssue 37 and now this closes #37

--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,18 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-family: "Droid Sans", sans-serif;
-  line-height: 1.8;
+  line-height: 1.6;
   word-spacing: .75px;
 }
+
+p a:link {
+  color: blue;
+}
+
+p a:visited{
+  color: blue;
+}
+
 
 #main {
   padding-left: 10px;
